<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/first_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true">


    <ImageButton
        android:id="@+id/notificationButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/baseline_notifications_24"
        android:background="@android:color/transparent"
        android:contentDescription="@string/notification_btn" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_layout"
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:layout_below="@id/first_layout"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="12dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Maximum loan limit"
                android:textColor="@color/white"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:text="6,000 GHS" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Maximum loan Term"
                android:textSize="17sp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="180 days"
                android:textSize="17sp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/review_status_textview"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/second_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:visibility="gone" />

    <Button
        android:id="@+id/application_btn"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/review_status_textview"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="300dp"
        android:text="Apply now!"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:background="@color/Medium_blue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/home_image_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_home_24"
            android:contentDescription="@string/home_description" />

        <ImageButton
            android:id="@+id/account_image_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_person_24"
            android:clickable="true"
            android:onClick="myClickHandler"
            android:contentDescription="@string/edit_profile_btn" />

    </LinearLayout>

</RelativeLayout>